WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279449
[WebGPU] Nullptr crash in updateExternalTextures
https://bugs.webkit.org/show_bug.cgi?id=279449
Summary
[WebGPU] Nullptr crash in updateExternalTextures
Mike Wyrzykowski
Reported
2024-09-10 09:26:11 PDT
[WebGPU] Nullptr crash in updateExternalTextures
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-09-10 09:26:23 PDT
radar://135707307
Mike Wyrzykowski
Comment 2
2024-09-10 09:31:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33405
EWS
Comment 3
2024-09-10 19:42:02 PDT
Committed
283456@main
(1bbb00302cef): <
https://commits.webkit.org/283456@main
> Reviewed commits have been landed. Closing PR #33405 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug