[WebGPU] Nullptr crash in updateExternalTextures https://bugs.webkit.org/show_bug.cgi?id=279449 rdar://135707307

Reviewed by Dan Glastonbury.

BindGroup's m_bindGroupLayout is a RefPtr, which is nullptr
when the bind group is invalid. We need to check for null
otherwise we will encounter a nullptr crash when an invalid
bind group is used with a valid external texture.

* Source/WebGPU/WebGPU/BindGroup.mm:
(WebGPU::BindGroup::rebindSamplersIfNeeded const):
(WebGPU::BindGroup::updateExternalTextures):

Canonical link: https://commits.webkit.org/283456@main